test/type-error-5.ktn
// TODO(strager): Improve error reporting.

def myAddVector: __add_vector

def bar ([a] [Char] -> Int):
  ->x [x] myAddVector
